--- a/plus0ne_server/package.json
+++ b/plus0ne_server/package.json
@@ -16,6 +16,7 @@
     "cryptr": "^4.0.2",
     "dialogflow": "^0.9.1",
     "dialogflow-fulfillment": "^0.6.1",
+    "google-gax": "^1.1.1",
     "express": "^4.17.1",
     "firebase-admin": "^7.4.0",
     "nodemailer": "^6.2.1",
