--- a/plus0ne_react/package.json
+++ b/plus0ne_react/package.json
@@ -3,11 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^3.9.3",
+    "@date-io/core": "^1.3.7",
+    "@date-io/date-fns": "^1.3.7",
+    "@material-ui/core": "^4.1.2",
     "@material-ui/icons": "^3.0.2",
+    "@material-ui/pickers": "^3.1.2",
+    "@types/date-fns": "^2.6.0",
+    "@types/material-ui": "^0.21.6",
     "@types/react-redux": "^7.1.0",
-    "@types/react-router-dom": "^4.3.3",
+    "@types/react-router-dom": "^4.3.4",
     "axios": "^0.18.1",
+    "browser-image-compression": "^1.0.5",
+    "date-fns": "^2.0.0-alpha.37",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
@@ -22,10 +29,10 @@
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
-    "@types/jest": "^24.0.13",
-    "@types/node": "^11.13.14",
-    "@types/react": "^16.8.19",
+    "@types/jest": "^24.0.15",
+    "@types/node": "^11.13.15",
+    "@types/react": "^16.8.22",
     "@types/react-dom": "^16.8.4",
-    "typescript": "^3.5.1"
+    "typescript": "^3.5.2"
   }
 }
