--- a/plus0ne_react/tsconfig.json
+++ b/plus0ne_react/tsconfig.json
@@ -17,7 +17,8 @@
     "importHelpers": true,
     "strictNullChecks": false,
     "suppressImplicitAnyIndexErrors": true,
-    "noUnusedLocals": true
+    "noUnusedLocals": true,
+    "allowSyntheticDefaultImports": true,
   },
   "exclude": [
     "node_modules",
