--- a/plus0ne_server/package.json
+++ b/plus0ne_server/package.json
@@ -14,11 +14,11 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "cryptr": "^4.0.2",
-    "dialogflow": "^0.9.1",
-    "dialogflow-fulfillment": "^0.6.1",
-    "google-gax": "^1.1.1",
+    "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.1.5",
     "firebase-admin": "^7.4.0",
+    "google-gax": "^1.1.1",
     "nodemailer": "^6.2.1",
     "uuid": "^3.3.2"
   }
