--- a/plus0ne_hosting/functions/package.json
+++ b/plus0ne_hosting/functions/package.json
@@ -26,6 +26,7 @@
     "google-gax": "^1.1.1",
     "nodemailer": "^6.2.1",
     "uuid": "^3.3.2",
+    "dateformat": "^3.0.3",
     "xml2js": "^0.4.19"
   },
   "devDependencies": {
